[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GridTester.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/AbrilFatface-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="GridTester" type="Node2D"]
script = ExtResource( 1 )

[node name="Grid" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Control" type="Control" parent="Camera2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="Money" type="Label" parent="Camera2D/Control"]
margin_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )

[node name="CameraTween" type="Tween" parent="."]

[connection signal="on_feed" from="Grid" to="." method="_on_Grid_on_feed"]
[connection signal="on_harvest" from="Grid" to="." method="_on_Grid_on_harvest"]
[connection signal="on_purchased" from="Grid" to="." method="_on_Grid_on_purchased"]
